--- a/style/style.css
+++ b/style/style.css
@@ -22,15 +22,13 @@
   --black: #141318;
   --brown: #3b200b;
   --light-brown: #fae2cb;
+  --blue: rgba(2, 14, 31, 0.69);
+  --lightblue: rgba(2, 14, 31, 0.3);
 }
 
 body {
   background-color: #faf3f2;
 }
-
-/* img {
-  max-width: 100%;
-} */
 
 .title {
   font-family: var(--title);
@@ -99,21 +97,11 @@ nav {
 }
 
 .socials {
-  border-right: 1px solid black;
+  border-right: 1px solid #b50b04;
   padding-inline: 1rem;
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
-  padding-block: 0.5rem;
-}
-
-.whatsapp-icon,
-.instragram-icon {
-  width: 1.2rem;
-}
-
-.ifood-icon {
-  width: 1.8rem;
 }
 
 #mobile-btn {
@@ -226,7 +214,7 @@ main {
   padding-inline: 2rem;
 }
 
-.specials-offers h2{
+.specials-offers h2 {
   font-size: 2rem;
   color: var(--brown);
 }
@@ -287,12 +275,11 @@ main {
   display: flex;
 }
 
-
 .offer-alert {
   align-self: flex-end;
 }
 
-.imperial{
+.imperial {
   color: white;
   font-size: 1.563rem;
 }
@@ -304,8 +291,8 @@ main {
   background-position: center;
 }
 
-.second-offer h2, 
-.third-offer h2{ 
+.second-offer h2,
+.third-offer h2 {
   font-size: 1.25rem;
 }
 
@@ -433,7 +420,6 @@ main {
 }
 /* Menu */
 
-
 /* card image */
 
 .card {
@@ -448,58 +434,58 @@ main {
   padding: 1rem;
 }
 
-.card-image{ 
-width: 25rem;
-min-height: 25rem;
+.card-image {
+  width: 25rem;
+  min-height: 25rem;
 }
 
-.card-image img{
+.card-image img {
   max-width: 100%;
 }
 
-.card-info{
+.card-info {
   width: 20rem;
 }
 
-.card-info h1{
+.card-info h1 {
   font-size: 2rem;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   color: var(--brown);
 }
 
-.card-info h1 span{ 
-  padding: .05rem;
+.card-info h1 span {
+  padding: 0.05rem;
   color: var(--brown);
 }
 /* card image */
 
 /* carrousel and comments */
 
-.comments{
+.comments {
   width: 80%;
   margin: 1rem auto 0 auto;
 }
 
-.comments h2{
+.comments h2 {
   font-size: 2rem;
   color: var(--brown);
 }
 
-.carroussel{
+.carroussel {
   margin-top: 1rem;
   overflow-x: scroll;
   gap: 1rem;
   padding: 1rem;
 }
 
-.line-clamp{ 
+.line-clamp {
   display: -webkit-box;
   -webkit-line-clamp: 4;
-  -webkit-box-orient: vertical;  
+  -webkit-box-orient: vertical;
   overflow: hidden;
 }
 
-.carrousel-content{ 
+.carrousel-content {
   flex-shrink: 0;
   width: 23.125rem;
   padding: 1rem;
@@ -508,41 +494,40 @@ min-height: 25rem;
   height: 11.063rem;
 }
 
-.corrousel-profile-content{
+.corrousel-profile-content {
   align-items: center;
-  gap: .6rem;
+  gap: 0.6rem;
   margin-top: 1rem;
 }
 
-.profile-image{
+.profile-image {
   align-items: center;
   justify-content: center;
-
 }
 
-.profile-image img{
+.profile-image img {
   width: 48px;
   height: 48px;
   border-radius: 50%;
 }
 
-.carrousel-name-age h3{ 
+.carrousel-name-age h3 {
   color: var(--brown);
 }
 
-.carrousel-name-age span{
-  font-size: .75rem;
+.carrousel-name-age span {
+  font-size: 0.75rem;
 }
 
 /* carrousel and comments */
 
 /* instagram posts */
-.instagram-posts{ 
+.instagram-posts {
   margin-top: 8rem;
   text-align: center;
 }
 
-.instagram-posts h2{
+.instagram-posts h2 {
   text-transform: uppercase;
   font-size: 2rem;
   color: var(--brown);
@@ -566,38 +551,227 @@ min-height: 25rem;
   }
 } */
 
-.posts::before, 
-.posts::after{
-  content: '';
+.posts::before,
+.posts::after {
+  content: "";
   height: 100%;
   width: 10%;
   z-index: 2;
   position: absolute;
 }
 
-.posts::before{ 
-  background: linear-gradient(to left, rgba(59, 32, 11, 0.05), rgba(59, 32, 11, 0.562));
+.posts::before {
+  background: linear-gradient(
+    to left,
+    rgba(59, 32, 11, 0.05),
+    rgba(59, 32, 11, 0.562)
+  );
   left: 0;
 }
 
-.posts::after{
-  background: linear-gradient(to right,rgba(59, 32, 11, 0.05), rgba(59, 32, 11, 0.562));
+.posts::after {
+  background: linear-gradient(
+    to right,
+    rgba(59, 32, 11, 0.05),
+    rgba(59, 32, 11, 0.562)
+  );
   right: 0;
 }
 
-.hash-burguer{
-  width: 100%; 
+.hash-burguer {
+  width: 100%;
   overflow: hidden;
-  padding: .5rem;
+  padding: 0.5rem;
   white-space: nowrap;
   background-color: var(--yellow);
 }
 
-.hash-burguer h2{
+.hash-burguer h2 {
   font-size: 1.563rem;
 }
 /* instagram posts */
+/* delivery options */
+.delivery-options h1 {
+  margin-bottom: 2rem;
+  font-size: 2rem;
+  text-transform: uppercase;
+  color: var(--brown);
+}
+.develivery {
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+  margin-top: 1rem;
+  padding: 1rem;
+}
 
+.delivery-box {
+  background-color: white;
+  padding: 1rem;
+  border-radius: 10px;
+  transition: 0.5s ease;
+  cursor: default;
+  margin-bottom: 1rem;
+  gap: 1rem;
+}
+
+.delivery-box:hover {
+  box-shadow: 0px 4px 40px rgba(179, 155, 132, 0.5);
+}
+
+.delivery-text-content {
+  border-left: 1px solid var(--black);
+  padding-left: 1rem;
+}
+
+.delivery-text-content h3 {
+  color: var(--brown);
+  text-transform: uppercase;
+}
+
+.icon-size {
+  padding: 1rem;
+  background-color: var(--light-brown);
+  border-radius: 50px;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon-size img {
+  width: 25px;
+  height: 25px;
+}
+
+.ifood-icon {
+  width: 50px;
+  height: 50px;
+}
+/* delivery options */
+
+/* take your order */
+
+.take-your-order {
+  background-color: var(--red);
+  max-width: 1200px;
+  margin: 5rem auto 0 auto;
+  padding: 1rem;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 1rem;
+  border-radius: 10px;
+}
+
+.teste {
+  align-items: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+  max-width: 35rem;
+}
+.phone-box {
+  background-color: rgba(29, 6, 5, 0.2);
+  padding: 1rem;
+  border-radius: 50px;
+  justify-content: center;
+  align-items: center;
+}
+.phone-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.order-content {
+  max-width: 28rem;
+  border-left: 1px solid rgba(29, 6, 5, 0.4);
+  padding-left: 0.5rem;
+}
+
+.order-content h2 {
+  font-size: 1.563rem;
+  color: rgba(29, 6, 5, 0.69);
+}
+
+.order-content p {
+  font-size: 1rem;
+  color: var(--light-brown);
+}
+
+.order-content span {
+  color: var(--light-brown);
+  font-weight: bold;
+}
+
+.order-btn {
+  background-color: var(--light-brown);
+  color: var(--red);
+  border-radius: 4px;
+  padding: 8px 16px 8px 16px;
+  font-size: 1.2rem;
+  font-weight: 900;
+  cursor: pointer;
+  transition: 0.5s ease;
+}
+
+.order-btn:hover {
+  color: var(--black);
+}
+/* take your order */
+
+/* footer */
+
+footer{
+  text-align: center;
+  width: 100%;
+}
+
+footer h2{
+  text-transform: uppercase;
+  color: var(--brown);
+  font-size: 2rem;
+}
+
+.localization{
+margin-top: 2rem;
+}
+
+.footer-navigation{
+  flex-wrap: wrap;
+  margin: 0 auto;
+  max-width: 1200px;
+  align-items: center;
+  justify-content: space-between;
+  padding-block: 1rem;
+}
+
+.footer-list{
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.footer-list li a{
+  transition: .5s ease;
+  cursor: pointer;
+}
+
+.footer-list li a:hover{
+  font-weight: 900;
+}
+
+.footer-copyright{
+  border: 1px solid red;
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.copyright-mark{
+  color: var(--blue);
+}
+
+.all-rights{
+  color: var(--lightblue);
+}
+/* footer */
 
 /* media queries */
 @media (max-width: 960px) {
@@ -660,7 +834,6 @@ min-height: 25rem;
       "third-offer";
   }
 
-
   .offer-info h2 {
     font-size: 1.25rem;
   }
@@ -678,16 +851,47 @@ min-height: 25rem;
     background-position: right;
   }
 
-  .card{
+  .card {
     justify-content: flex-start;
     gap: 0;
   }
 
-  .card-info h1{ 
+  .card-info h1 {
     font-size: 3rem;
   }
 
-  .img-post{
+  .img-post {
     max-width: 8rem;
+  }
+
+  .teste {
+    justify-content: center;
+  }
+  .take-your-order {
+    justify-content: center;
+  }
+  .order-content {
+    text-align: center;
+    border-left:0;
+    border-top: 1px solid rgba(29, 6, 5, 0.4);
+    padding: .2rem 0 0 0;
+  }
+
+  .footer-logo{
+    order: 1;
+  }
+
+  .footer-list{
+    flex-direction: column;
+    order: 3;
+  }
+
+  .footer-socials{
+    order: 2;
+  }
+
+  .footer-navigation{
+    flex-direction: column;
+    gap: 1rem;
   }
 }
