--- a/style/style.css
+++ b/style/style.css
@@ -677,8 +677,8 @@ main {
   align-items: center;
 }
 .phone-icon {
-  width: 40px;
-  height: 40px;
+  width: 55px;
+  height: 55px;
 }
 
 .order-content {
@@ -868,6 +868,7 @@ margin-top: 2rem;
     justify-content: center;
   }
   .take-your-order {
+    margin-inline: .8rem;
     justify-content: center;
   }
   .order-content {
